services-and-networking/network-policies/test-deny-egress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: test-deny-egress
  namespace: test-deny
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress: []
